--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/react-native": "5.5.0",
     "@tanstack/react-query": "^4.32.6",
     "expo": "~49.0.5",
+    "expo-application": "~5.3.0",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.11",
     "expo-web-browser": "^12.3.2",
@@ -46,7 +50,8 @@
     "react-redux": "^8.1.2",
     "react-test-renderer": "18.2.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
